--- a/less/main.less
+++ b/less/main.less
@@ -1,14 +1,14 @@
 .artists-container {
     .center();
-    margin: 3% 5%;
+    margin-top: 3% 5%;
     justify-content: space-around;
     border-top: solid black 2px;
     padding-top: 2%;
 
     @media @mobile {
         flex-direction: column;
-        padding: 8% 20%;
-        margin-top: 3% 0;
+        padding: 8% 10%;
+        margin-top: 3%;
 
     }
 
